// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentColumn Snapshots with a color passed in matches snapshot 1`] = `
<div
  class="ContentColumn ContentColumn--blue"
>
  <smart-link
    class="ContentColumn-link"
    to="testPath"
  >
    <h2
      class="ContentColumn-title"
    >
      title
    </h2>
     
    <img
      class="ContentColumn-icon"
      src=""
    />
     
    <div
      class="ContentColumn-description"
    >
      <p>
        test preamble
      </p>
    </div>
  </smart-link>
</div>
`;

exports[`ContentColumn Snapshots without a color passed in matches snapshot 1`] = `
<div
  class="ContentColumn ContentColumn--"
>
  <smart-link
    class="ContentColumn-link"
    to="testPath"
  >
    <h2
      class="ContentColumn-title"
    >
      title
    </h2>
     
    <img
      class="ContentColumn-icon"
      src=""
    />
     
    <div
      class="ContentColumn-description"
    >
      <p>
        test preamble
      </p>
    </div>
  </smart-link>
</div>
`;
